# mizan

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: BREP_DOCUMENTATION.md  TESSELLATION_UI_GUIDE.md
shaders/: basic.frag  wireframe.frag
src/: Application.cpp  Application.h  CMakeLists.txt  Window.cpp  Window.h  main.cpp
src/core/: CMakeLists.txt  config.cpp
src/core/brep/: Assembly.h  BREPBuilder.cpp  BREPBuilder.h  Builder.cpp  Builder.h  Edge.h  Face.h  HalfEdge.cpp  HalfEdge.h  Loop.cpp  Loop.h  Shell.cpp  Shell.h  Solid.h  Types.h  Vertex.cpp  Vertex.h
src/core/modeller/: Modeller.h
src/editor/: Application.cpp  Application.h  CMakeLists.txt  _Application.cpp  main.cpp
src/editor/logger/: Logger.cpp  Logger.h
src/editor/renderer/: Camera.h  GridRenderer.cpp  GridRenderer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Tessellator.cpp  Tessellator.h  VertexArray.cpp  VertexArray.h
src/editor/renderer/shaders/: basic.vert  tessellation.frag  tessellation.tesc  tessellation.tese  tessellation.vert  tessellation_feedback.tesc  tessellation_feedback.tese  tessellation_feedback.vert
src/editor/scene/: Scene.cpp  Scene.h  SceneObject.h
src/editor/shaders/: wireframe.vert
src/editor/ui/: FontManager.cpp  FontManager.h  IconUtils.cpp  IconUtils.h  Icons.h  IconsFallback.h  UIManager.cpp  Viewport.cpp
src/editor/window/: Window.cpp  Window.h
src/editor/workbench/: Settings.cpp  Settings.h  Toolkit.cpp  Toolkit.h  Viewport.cpp  Viewport.h  Workbench.cpp  Workbench.h
src/modeller/: BREPBuilder.cpp  BREPBuilder.h  Edge.cpp  Face.cpp  Face.h  HalfEdge.cpp  HalfEdge.h  Shell.cpp  Solid.cpp  Vertex.cpp
src/renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Tesselator.cpp  Tesselator.h
src/ui/: UIManager.cpp  UIManager.h  Viewport.h  Window.cpp  Window.h
tests/: CMakeLists.txt
